<resources>
    <string name="app_name">SMSApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- LoginActivity-->
    <string name="glad_to_see">Glad to see you!</string>
    <string name="enter_phone_to_get_verified">Enter your phone number below to get  a verification code.</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>

    <!-- Verification-->
    <string name="verification_code">Verification code</string>
    <string name="password_sent_on">Enter one time password sent on </string>
    <string name="verify_code">Verify code</string>
    <string name="otp_can_resend">Haven\'t received the code yet?</string>
    <string name="resend_code"><u>Resend Code</u></string>


    <string-array name="name">
        <item>Hello</item>
        <item>How are you</item>
        <item>What are you doing</item>
        <item>Tell me something about yourself</item>
        <item>From where you are</item>
    </string-array>
    <string name="logout_">Are you sure you want to logout?</string>

</resources>