<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Verification_Activity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_img"
        android:layout_width="match_parent"
        android:src="@drawable/header_login"
        android:scaleType="fitXY"
        android:layout_height="@dimen/_150sdp"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/frt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:text="@string/verification_code"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scd_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:text="@string/password_sent_on"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:text="Mobile Number"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatTextView>

            <com.mukesh.OtpView
                android:id="@+id/otpView"
                style="@style/otpVerificationEditText"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:cursorVisible="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_22sdp"
                app:itemCount="6"
                android:inputType="number"
                app:itemSpacing="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:lineColor="@color/black"
                app:itemHeight="50dp"
                app:itemRadius="5dp"
                app:itemWidth="40dp"
                app:lineWidth="@dimen/_1sdp"
                app:viewType="rectangle"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verifyCode"
                android:layout_width="match_parent"
                android:text="@string/verify_code"
                android:textStyle="bold"
                style="@style/defaultButton"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_height="@dimen/_50sdp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:text="@string/otp_can_resend"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/re_sent_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/purple_200"
                android:text="@string/resend_code"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/re_sent_code_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/purple_200"
                android:text="time"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatTextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:background="#99000000"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contextClickable="true"
        android:gravity="center"
        android:clickable="true"
        android:visibility="gone"
        android:layout_height="match_parent">



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>