<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login_Activity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_img"
        android:layout_width="match_parent"
        android:src="@drawable/header_login"
        android:scaleType="fitXY"
        android:layout_height="@dimen/_150sdp"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_140sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/frt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:text="@string/glad_to_see"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scd_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:text="@string/enter_phone_to_get_verified"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"
                tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/thd_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/view"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_10sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/country_code_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            app:ccpDialog_showNameCode="false"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_defaultNameCode="us"
                            app:ccp_showFullName="false"
                            app:ccp_showNameCode="false"
                            app:ccp_showPhoneCode="true"
                            app:ccp_textSize="@dimen/_12sdp">

                        </com.hbb20.CountryCodePicker>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <!-- Todo : Need to handle hint related-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPhoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_12sdp"
                            android:layout_marginRight="@dimen/_24sdp"
                            android:background="@null"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoneLogo"
                            app:layout_constraintStart_toEndOf="@+id/textViewCountryCode"
                            app:layout_constraintTop_toTopOf="@+id/imageViewPhoneLogo" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/defaultButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_27sdp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:background="#99000000"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contextClickable="true"
        android:gravity="center"
        android:clickable="true"
        android:visibility="gone"
        android:layout_height="match_parent">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>